--- a/Resources/Private/Partials/Bootstrap/Cart/Summary.html
+++ b/Resources/Private/Partials/Bootstrap/Cart/Summary.html
@@ -1,3 +1,5 @@
+{namespace cart=Extcode\Cart\ViewHelpers}
+
 <div class="cart_footer">
 
     <div class="cart_col cart_foot_col1 cart_net">
@@ -5,12 +7,7 @@
                 key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:\Extcode\Cart\Domain\Model\product.cart_net"/>
     </div>
     <div class="cart_col cart_foot_col2 cart_net">
-        <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{cart.net}</f:format.currency>
+        <cart:format.currency>{cart.net}</cart:format.currency>
     </div>
     <div class="cart_cleaner"><!-- --></div>
 
@@ -19,12 +16,7 @@
                 key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:\Extcode\Cart\Domain\Model\product.cart_gross"/>
     </div>
     <div class="cart_col cart_foot_col2 cart_gross">
-        <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{cart.gross}</f:format.currency>
+        <cart:format.currency>{cart.gross}</cart:format.currency>
     </div>
     <div class="cart_cleaner"><!-- --></div>
 
@@ -36,12 +28,7 @@
                 key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:\Extcode\Cart\Domain\Model\product.service_net"/>
     </div>
     <div class="cart_col cart_foot_col2 cart_servicecost_net">
-        <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{cart.serviceNet}</f:format.currency>
+        <cart:format.currency>{cart.serviceNet}</cart:format.currency>
     </div>
     <div class="cart_cleaner"><!-- --></div>
 
@@ -50,12 +37,7 @@
                 key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:\Extcode\Cart\Domain\Model\product.service_gross"/>
     </div>
     <div class="cart_col cart_foot_col2 cart_servicecost_gross">
-        <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{cart.serviceGross}</f:format.currency>
+        <cart:format.currency>{cart.serviceGross}</cart:format.currency>
     </div>
     <div class="cart_cleaner"><!-- --></div>
 
@@ -67,24 +49,14 @@
                 key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:\Extcode\Cart\Domain\Model\product.total_net"/>
     </div>
     <div class="cart_col cart_foot_col2 cart_servicecost_total_net">
-        <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{cart.totalNet}</f:format.currency>
+        <cart:format.currency>{cart.totalNet}</cart:format.currency>
     </div>
     <div class="cart_col cart_foot_col1 cart_servicecost_total_gross">
         <f:translate
                 key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:\Extcode\Cart\Domain\Model\product.total_gross"/>
     </div>
     <div class="cart_col cart_foot_col2 cart_servicecost_total_gross">
-        <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{cart.totalGross}</f:format.currency>
+        <cart:format.currency>{cart.totalGross}</cart:format.currency>
     </div>
     <div class="cart_cleaner"><!-- --></div>
 
