--- a/Resources/Private/Partials/Default/Cart/Mail/Summary.html
+++ b/Resources/Private/Partials/Default/Cart/Mail/Summary.html
@@ -1,3 +1,5 @@
+{namespace cart=Extcode\Cart\ViewHelpers}
+
 <tr class="first">
     <td colspan="4" style="text-align: right;">
         <f:translate
@@ -5,12 +7,7 @@
     </td>
     <td style="text-align: right;" class="last">
         <span class="price">
-            <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                               decimalSeparator="{settings.format.currency.decimalSeparator}"
-                               thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                               prependCurrency="{settings.format.currency.prependCurrency}"
-                               separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">{cart.net}</f:format.currency>
+            <cart:format.currency>{cart.net}</cart:format.currency>
         </span>
     </td>
 </tr>
@@ -21,12 +18,7 @@
     </td>
     <td style="text-align: right;" class="last">
         <span class="price">
-            <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                               decimalSeparator="{settings.format.currency.decimalSeparator}"
-                               thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                               prependCurrency="{settings.format.currency.prependCurrency}"
-                               separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">{cart.gross}</f:format.currency>
+            <cart:format.currency>{cart.gross}</cart:format.currency>
         </span>
     </td>
 </tr>
@@ -40,12 +32,7 @@
     </td>
     <td style="text-align: right;" class="last">
         <span class="price">
-            <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                               decimalSeparator="{settings.format.currency.decimalSeparator}"
-                               thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                               prependCurrency="{settings.format.currency.prependCurrency}"
-                               separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">{cart.serviceNet}</f:format.currency>
+            <cart:format.currency>{cart.serviceNet}</cart:format.currency>
         </span>
     </td>
 </tr>
@@ -56,12 +43,7 @@
     </td>
     <td style="text-align: right;" class="last">
         <span class="price">
-            <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                               decimalSeparator="{settings.format.currency.decimalSeparator}"
-                               thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                               prependCurrency="{settings.format.currency.prependCurrency}"
-                               separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">{cart.serviceGross}</f:format.currency>
+            <cart:format.currency>{cart.serviceGross}</cart:format.currency>
         </span>
     </td>
 </tr>
@@ -75,12 +57,7 @@
     </td>
     <td style="text-align: right;" class="last">
         <span class="price">
-            <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                               decimalSeparator="{settings.format.currency.decimalSeparator}"
-                               thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                               prependCurrency="{settings.format.currency.prependCurrency}"
-                               separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">{cart.totalNet}</f:format.currency>
+            <cart:format.currency>{cart.totalNet}</cart:format.currency>
         </span>
     </td>
 </tr>
@@ -91,12 +68,7 @@
     </td>
     <td style="text-align: right;" class="last">
         <span class="price">
-            <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                               decimalSeparator="{settings.format.currency.decimalSeparator}"
-                               thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                               prependCurrency="{settings.format.currency.prependCurrency}"
-                               separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">{cart.totalGross}</f:format.currency>
+            <cart:format.currency>{cart.totalGross}</cart:format.currency>
         </span>
     </td>
 </tr>
