--- a/Resources/Private/Partials/Default/Cart/Product.html
+++ b/Resources/Private/Partials/Default/Cart/Product.html
@@ -1,3 +1,5 @@
+{namespace cart=Extcode\Cart\ViewHelpers}
+
 <tr class="{f:if(condition: product.quantityIsInRange, then: '', else: 'danger')}">
     <td colspan="2">
         <div class="product-name">{product.title} - {product.feVariant.value}</div>
@@ -8,12 +10,7 @@
     </td>
     <td class="text-right">
                     <span class="price">
-                        <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                                           prependCurrency="{settings.format.currency.prependCurrency}"
-                                           separateCurrency="{settings.format.currency.separateCurrency}"
-                                           decimals="{settings.format.currency.decimals}">{product.bestPrice}</f:format.currency>
+                        <cart:format.currency>{product.bestPrice}</cart:format.currency>
                     </span>
     </td>
     <td class="a-center">
@@ -24,12 +21,7 @@
     <td class="text-right">
         <f:if condition="{product.quantityIsInRange}">
             <f:then>
-                <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                                   decimalSeparator="{settings.format.currency.decimalSeparator}"
-                                   thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                                   prependCurrency="{settings.format.currency.prependCurrency}"
-                                   separateCurrency="{settings.format.currency.separateCurrency}"
-                                   decimals="{settings.format.currency.decimals}">{product.gross}</f:format.currency>
+                <cart:format.currency>{product.gross}</cart:format.currency>
             </f:then>
             <f:else>
                 <f:if condition="{product.quantityBelowRange}">
