--- a/Resources/Private/Partials/Default/Product/Price.html
+++ b/Resources/Private/Partials/Default/Product/Price.html
@@ -1,19 +1,11 @@
+{namespace cart=Extcode\Cart\ViewHelpers}
+
 <f:if condition="{product.specialPrices}">
     <f:then>
-        <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{product.bestSpecialPrice}</f:format.currency>
+        <cart:format.currency>{product.bestSpecialPrice}</cart:format.currency>
         bisher:
         <del>
-            <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                               decimalSeparator="{settings.format.currency.decimalSeparator}"
-                               thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                               prependCurrency="{settings.format.currency.prependCurrency}"
-                               separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">{product.price}</f:format.currency>
+            <cart:format.currency>{product.price}</cart:format.currency>
         </del>
         <strong>(Sie sparen: {product.bestSpecialPricePercentageDiscount} %)</strong>
     </f:then>
@@ -22,11 +14,6 @@
             <f:translate key="tx_cart_domain_model_product.price.from"/>
             :
         </f:if>
-        <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{product.minPrice}</f:format.currency>
+        <cart:format.currency>{product.minPrice}</cart:format.currency>
     </f:else>
 </f:if>
