--- a/Resources/Private/Backend/Partials/Order/Show/OrderTax.html
+++ b/Resources/Private/Backend/Partials/Order/Show/OrderTax.html
@@ -1,11 +1,8 @@
+{namespace cart=Extcode\Cart\ViewHelpers}
+
 <li>
     <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xml:plugin.cart.product.tax"
                  arguments="{0: orderTax.orderTaxClass.name}"/>
     :
-    <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                       decimalSeparator="{settings.format.currency.decimalSeparator}"
-                       thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                       prependCurrency="{settings.format.currency.prependCurrency}"
-                       separateCurrency="{settings.format.currency.separateCurrency}"
-                       decimals="{settings.format.currency.decimals}">{orderTax.tax}</f:format.currency>
+    <cart:format.currency>{orderTax.tax}</cart:format.currency>
 </li>
