--- a/Resources/Private/Partials/Bootstrap/Cart/Product.html
+++ b/Resources/Private/Partials/Bootstrap/Cart/Product.html
@@ -1,3 +1,5 @@
+{namespace cart=Extcode\Cart\ViewHelpers}
+
 <div class="cart_product">
     <div class="cart_col cart_col_title cart_itemall">{cartProduct.title}</div>
     <div class="cart_col cart_col_sku cart_itemall">{cartProduct.sku}</div>
@@ -7,12 +9,7 @@
                 &nbsp;
             </f:then>
             <f:else>
-                <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                                   decimalSeparator="{settings.format.currency.decimalSeparator}"
-                                   thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                                   prependCurrency="{settings.format.currency.prependCurrency}"
-                                   separateCurrency="{settings.format.currency.separateCurrency}"
-                                   decimals="{settings.format.currency.decimals}">{cartProduct.price}</f:format.currency>
+                <cart:format.currency>{cartProduct.price}</cart:format.currency>
             </f:else>
         </f:if>
     </div>
@@ -20,12 +17,7 @@
         {cartProduct.qty}
     </div>
     <div class="cart_col cart_col_total cart_right cart_itemall">
-        <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{cartProduct.gross}</f:format.currency>
+        <cart:format.currency>{cartProduct.gross}</cart:format.currency>
     </div>
     <div>
         <f:link.action action="removeProduct" arguments="{cartProduct: product.id}">delete</f:link.action>
