--- a/Resources/Private/Partials/Bootstrap/Cart/ProductVariant.html
+++ b/Resources/Private/Partials/Bootstrap/Cart/ProductVariant.html
@@ -4,23 +4,13 @@
     <div class="cart_col cart_col_title">{variant.title}</div>
     <div class="cart_col cart_col_sku">{variant.sku}</div>
     <div class="cart_col cart_col_price cart_right">
-        <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{variant.price}</f:format.currency>
+        <cart:format.currency>{variant.price}</cart:format.currency>
     </div>
     <div class="cart_col cart_col_qty cart_center">
         {variant.qty}
     </div>
     <div class="cart_col cart_col_total cart_right">
-        <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{variant.gross}</f:format.currency>
+        <cart:format.currency>{variant.gross}</cart:format.currency>
     </div>
     <div>
         <cart:link.action action="removeProduct" product="{variant.product}" beVariant="{variant}">
