--- a/Resources/Private/Partials/Default/Cart/Mail/ProductWithVariant.html
+++ b/Resources/Private/Partials/Default/Cart/Mail/ProductWithVariant.html
@@ -18,23 +18,13 @@
                     </p>
                 </td>
                 <td style="text-align: right;">
-                    <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                                       decimalSeparator="{settings.format.currency.decimalSeparator}"
-                                       thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                                       prependCurrency="{settings.format.currency.prependCurrency}"
-                                       separateCurrency="{settings.format.currency.separateCurrency}"
-                                       decimals="{settings.format.currency.decimals}">{variant.priceCalculated}</f:format.currency>
+                    <cart:format.currency>{variant.priceCalculated}</cart:format.currency>
                 </td>
                 <td style="text-align: right;">
                     {variant.quantity}
                 </td>
                 <td style="text-align: right;" class="last">
-                    <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                                       decimalSeparator="{settings.format.currency.decimalSeparator}"
-                                       thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                                       prependCurrency="{settings.format.currency.prependCurrency}"
-                                       separateCurrency="{settings.format.currency.separateCurrency}"
-                                       decimals="{settings.format.currency.decimals}">{variant.gross}</f:format.currency>
+                    <cart:format.currency>{variant.gross}</cart:format.currency>
                 </td>
             </tr>
         </f:else>
@@ -75,12 +65,7 @@
         {product.quantity}
     </td>
     <td style="text-align: right;">
-        <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{product.gross}</f:format.currency>
+        <cart:format.currency>{product.gross}</cart:format.currency>
     </td>
     <td class="last">
         &nbsp;
