--- a/Resources/Private/Partials/Default/Cart/Mail/TaxList.html
+++ b/Resources/Private/Partials/Default/Cart/Mail/TaxList.html
@@ -1,3 +1,5 @@
+{namespace cart=Extcode\Cart\ViewHelpers}
+
 <f:for each="{taxes}" as="tax" key="tax_class">
     <tr>
         <td colspan="4" style="text-align: right;">
@@ -8,12 +10,7 @@
         </td>
         <td style="text-align: right;" class="last">
             <span class="price">
-                <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                                   decimalSeparator="{settings.format.currency.decimalSeparator}"
-                                   thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                                   prependCurrency="{settings.format.currency.prependCurrency}"
-                                   separateCurrency="{settings.format.currency.separateCurrency}"
-                                   decimals="{settings.format.currency.decimals}">{tax}</f:format.currency>
+                <cart:format.currency>{tax}</cart:format.currency>
             </span>
         </td>
     </tr>
