--- a/Resources/Private/Partials/Default/Order/List/Item.html
+++ b/Resources/Private/Partials/Default/Order/List/Item.html
@@ -1,3 +1,5 @@
+{namespace cart=Extcode\Cart\ViewHelpers}
+
 <tr>
     <td>
         {orderItem.orderNumber}
@@ -26,12 +28,7 @@
         </f:if>
     </td>
     <td style="width: 75px; text-align: right;">
-        <f:format.currency currencySign="{orderItem.currency}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{orderItem.totalGross}</f:format.currency>
+        <cart:format.currency>{orderItem.totalGross}</cart:format.currency>
     </td>
     <td>
         <f:link.action action="show" arguments="{orderItem : orderItem}">
