--- a/Resources/Private/Partials/Default/Order/Show/Product.html
+++ b/Resources/Private/Partials/Default/Order/Show/Product.html
@@ -1,3 +1,5 @@
+{namespace cart=Extcode\Cart\ViewHelpers}
+
 <tr>
     <td>
         {product.sku}
@@ -6,50 +8,25 @@
         {product.title}
     </td>
     <td>
-        <f:format.currency currencySign="{currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{product.price}</f:format.currency>
+        <cart:format.currency>{product.price}</cart:format.currency>
     </td>
     <td>
-        <f:format.currency currencySign="{currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{product.discount}</f:format.currency>
+        <cart:format.currency>{product.discount}</cart:format.currency>
     </td>
     <td>
         {product.count}
     </td>
     <td>
-        <f:format.currency currencySign="{currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{product.net}</f:format.currency>
+        <cart:format.currency>{product.net}</cart:format.currency>
     </td>
     <td>
-        <f:format.currency currencySign="{currencySign}"
-                           decimalSeparator="{settings.format.currency.decimalSeparator}"
-                           thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                           prependCurrency="{settings.format.currency.prependCurrency}"
-                           separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">{product.gross}</f:format.currency>
+        <cart:format.currency>{product.gross}</cart:format.currency>
     </td>
     <f:for each="{product.orderItem.orderTotalTax}" as="orderTotalTax">
         <td>
             <f:if condition="{0: orderTotalTax.orderTaxClass.id} == {0: {product.orderTaxClass.id}}">
                 <f:then>
-                    <f:format.currency currencySign="{currencySign}"
-                                       decimalSeparator="{settings.format.currency.decimalSeparator}"
-                                       thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                                       prependCurrency="{settings.format.currency.prependCurrency}"
-                                       separateCurrency="{settings.format.currency.separateCurrency}"
-                                       decimals="{settings.format.currency.decimals}">{product.orderTax.tax}</f:format.currency>
+                    <cart:format.currency>{product.orderTax.tax}</cart:format.currency>
                 </f:then>
                 <f:else>
                     <!-- -->
