--- a/Resources/Private/Partials/Foundation/Cart/ProductVariantList.html
+++ b/Resources/Private/Partials/Foundation/Cart/ProductVariantList.html
@@ -17,23 +17,13 @@
                     </p>
                 </td>
                 <td class="text-right">
-                    <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                                       decimalSeparator="{settings.format.currency.decimalSeparator}"
-                                       thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                                       prependCurrency="{settings.format.currency.prependCurrency}"
-                                       separateCurrency="{settings.format.currency.separateCurrency}"
-                                       decimals="{settings.format.currency.decimals}">{variant.price}</f:format.currency>
+                    <cart:format.currency>{variant.price}</cart:format.currency>
                 </td>
                 <td class="a-center">
                     {variant.quantity}
                 </td>
                 <td class="last text-right">
-                    <f:format.currency currencySign="{settings.format.currency.currencySign}"
-                                       decimalSeparator="{settings.format.currency.decimalSeparator}"
-                                       thousandsSeparator="{settings.format.currency.thousandsSeparator}"
-                                       prependCurrency="{settings.format.currency.prependCurrency}"
-                                       separateCurrency="{settings.format.currency.separateCurrency}"
-                                       decimals="{settings.format.currency.decimals}">{variant.gross}</f:format.currency>
+                    <cart:format.currency>{variant.gross}</cart:format.currency>
                 </td>
             </tr>
         </f:for>
